Finally openapi generated right way
