# book-network/src/main/java/com/devrezo/book/auth/AuthenticationController.java
@@ -35,7 +35,7 @@ public class AuthenticationController {
     }
 
     @GetMapping("/activate-account")
-    public void activateAccount(@RequestParam String token) throws MessagingException {
+    public void confirm(@RequestParam String token) throws MessagingException {
         authenticationService.activateAccount(token);
     }
 }
